fazer a dashboard atualizar em tempo real

--- a/Website/public/cadastroADM.html
+++ b/Website/public/cadastroADM.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="assets/styles/cadastroADM.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
                     <path fill-rule="nonzero"
                         d="M210.48 160.8c0-14.61 11.84-26.46 26.45-26.46s26.45 11.85 26.45 26.46v110.88l73.34 32.24c13.36 5.88 19.42 21.47 13.54 34.82-5.88 13.35-21.47 19.41-34.82 13.54l-87.8-38.6c-10.03-3.76-17.16-13.43-17.16-24.77V160.8zM5.4 168.54c-.76-2.25-1.23-4.64-1.36-7.13l-4-73.49c-.75-14.55 10.45-26.95 25-27.69 14.55-.75 26.95 10.45 27.69 25l.74 13.6a254.258 254.258 0 0136.81-38.32c17.97-15.16 38.38-28.09 61.01-38.18 64.67-28.85 134.85-28.78 196.02-5.35 60.55 23.2 112.36 69.27 141.4 132.83.77 1.38 1.42 2.84 1.94 4.36 27.86 64.06 27.53 133.33 4.37 193.81-23.2 60.55-69.27 112.36-132.83 141.39a26.24 26.24 0 01-12.89 3.35c-14.61 0-26.45-11.84-26.45-26.45 0-11.5 7.34-21.28 17.59-24.92 7.69-3.53 15.06-7.47 22.09-11.8.8-.66 1.65-1.28 2.55-1.86 11.33-7.32 22.1-15.7 31.84-25.04.64-.61 1.31-1.19 2-1.72 20.66-20.5 36.48-45.06 46.71-71.76 18.66-48.7 18.77-104.46-4.1-155.72l-.01-.03C418.65 122.16 377.13 85 328.5 66.37c-48.7-18.65-104.46-18.76-155.72 4.1a203.616 203.616 0 00-48.4 30.33c-9.86 8.32-18.8 17.46-26.75 27.29l3.45-.43c14.49-1.77 27.68 8.55 29.45 23.04 1.77 14.49-8.55 27.68-23.04 29.45l-73.06 9c-13.66 1.66-26.16-7.41-29.03-20.61zM283.49 511.5c20.88-2.34 30.84-26.93 17.46-43.16-5.71-6.93-14.39-10.34-23.29-9.42-15.56 1.75-31.13 1.72-46.68-.13-9.34-1.11-18.45 2.72-24.19 10.17-12.36 16.43-2.55 39.77 17.82 42.35 19.58 2.34 39.28 2.39 58.88.19zm-168.74-40.67c7.92 5.26 17.77 5.86 26.32 1.74 18.29-9.06 19.97-34.41 3.01-45.76-12.81-8.45-25.14-18.96-35.61-30.16-9.58-10.2-25.28-11.25-36.11-2.39a26.436 26.436 0 00-2.55 38.5c13.34 14.2 28.66 27.34 44.94 38.07zM10.93 331.97c2.92 9.44 10.72 16.32 20.41 18.18 19.54 3.63 36.01-14.84 30.13-33.82-4.66-15-7.49-30.26-8.64-45.93-1.36-18.33-20.21-29.62-37.06-22.33C5.5 252.72-.69 262.86.06 274.14c1.42 19.66 5.02 39 10.87 57.83z" />
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p></p>Geral
                 </div>
             </button>
@@ -33,7 +32,7 @@
                     <path fill-rule="nonzero"
                         d="M210.48 160.8c0-14.61 11.84-26.46 26.45-26.46s26.45 11.85 26.45 26.46v110.88l73.34 32.24c13.36 5.88 19.42 21.47 13.54 34.82-5.88 13.35-21.47 19.41-34.82 13.54l-87.8-38.6c-10.03-3.76-17.16-13.43-17.16-24.77V160.8zM5.4 168.54c-.76-2.25-1.23-4.64-1.36-7.13l-4-73.49c-.75-14.55 10.45-26.95 25-27.69 14.55-.75 26.95 10.45 27.69 25l.74 13.6a254.258 254.258 0 0136.81-38.32c17.97-15.16 38.38-28.09 61.01-38.18 64.67-28.85 134.85-28.78 196.02-5.35 60.55 23.2 112.36 69.27 141.4 132.83.77 1.38 1.42 2.84 1.94 4.36 27.86 64.06 27.53 133.33 4.37 193.81-23.2 60.55-69.27 112.36-132.83 141.39a26.24 26.24 0 01-12.89 3.35c-14.61 0-26.45-11.84-26.45-26.45 0-11.5 7.34-21.28 17.59-24.92 7.69-3.53 15.06-7.47 22.09-11.8.8-.66 1.65-1.28 2.55-1.86 11.33-7.32 22.1-15.7 31.84-25.04.64-.61 1.31-1.19 2-1.72 20.66-20.5 36.48-45.06 46.71-71.76 18.66-48.7 18.77-104.46-4.1-155.72l-.01-.03C418.65 122.16 377.13 85 328.5 66.37c-48.7-18.65-104.46-18.76-155.72 4.1a203.616 203.616 0 00-48.4 30.33c-9.86 8.32-18.8 17.46-26.75 27.29l3.45-.43c14.49-1.77 27.68 8.55 29.45 23.04 1.77 14.49-8.55 27.68-23.04 29.45l-73.06 9c-13.66 1.66-26.16-7.41-29.03-20.61zM283.49 511.5c20.88-2.34 30.84-26.93 17.46-43.16-5.71-6.93-14.39-10.34-23.29-9.42-15.56 1.75-31.13 1.72-46.68-.13-9.34-1.11-18.45 2.72-24.19 10.17-12.36 16.43-2.55 39.77 17.82 42.35 19.58 2.34 39.28 2.39 58.88.19zm-168.74-40.67c7.92 5.26 17.77 5.86 26.32 1.74 18.29-9.06 19.97-34.41 3.01-45.76-12.81-8.45-25.14-18.96-35.61-30.16-9.58-10.2-25.28-11.25-36.11-2.39a26.436 26.436 0 00-2.55 38.5c13.34 14.2 28.66 27.34 44.94 38.07zM10.93 331.97c2.92 9.44 10.72 16.32 20.41 18.18 19.54 3.63 36.01-14.84 30.13-33.82-4.66-15-7.49-30.26-8.64-45.93-1.36-18.33-20.21-29.62-37.06-22.33C5.5 252.72-.69 262.86.06 274.14c1.42 19.66 5.02 39 10.87 57.83z" />
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p>Quiz 1</p>
                 </div>
             </button>
@@ -50,7 +49,7 @@
                             d="M193,236.75h15v15c0,8.284,6.716,15,15,15s15-6.716,15-15v-15h15c8.284,0,15-6.716,15-15s-6.716-15-15-15 h-15v-15c0-8.284-6.716-15-15-15s-15,6.716-15,15v15h-15c-8.284,0-15,6.716-15,15S184.716,236.75,193,236.75z" />
                     </g>
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p>Quiz 2</p>
                 </div>
             </button>
@@ -63,7 +62,7 @@
                 <path
                     d="M289.639 9.137c12.411 7.25 23.763 18.883 33.037 34.913l.97 1.813 1.118 1.941 174.174 302.48c33.712 56.407-1.203 113.774-66.174 112.973v.12H73.485c-.895 0-1.78-.04-2.657-.112-59.104-.799-86.277-54.995-61.909-106.852.842-1.805 1.816-3.475 2.816-5.201L189.482 43.959l-.053-.032c9.22-15.786 20.717-27.457 33.411-34.805C243.788-3 268.711-3.086 289.639 9.137zM255.7 339.203c13.04 0 23.612 10.571 23.612 23.612 0 13.041-10.572 23.613-23.612 23.613-13.041 0-23.613-10.572-23.613-23.613s10.572-23.612 23.613-23.612zm17.639-35.379c-.794 19.906-34.506 19.931-35.278-.006-3.41-34.108-12.129-111.541-11.853-143.591.284-9.874 8.469-15.724 18.939-17.955 3.231-.686 6.781-1.024 10.357-1.019 3.595.008 7.153.362 10.387 1.051 10.818 2.303 19.309 8.392 19.309 18.446l-.043 1.005-11.818 142.069zM37.596 369.821L216.864 59.942c21.738-37.211 56.225-38.289 78.376 0l176.298 306.166c17.177 28.285 10.04 66.236-38.774 65.488H73.485c-33.017.756-52.841-25.695-35.889-61.775z" />
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p>Quiz 3 </p>
                 </div>
             </button>
@@ -80,7 +79,7 @@
                             d="M193,236.75h15v15c0,8.284,6.716,15,15,15s15-6.716,15-15v-15h15c8.284,0,15-6.716,15-15s-6.716-15-15-15 h-15v-15c0-8.284-6.716-15-15-15s-15,6.716-15,15v15h-15c-8.284,0-15,6.716-15,15S184.716,236.75,193,236.75z" />
                     </g>
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p>Novo ADM</p>
                 </div>
             </button>
@@ -94,7 +93,7 @@
                     <path d="M9 12h12l-3 -3" />
                     <path d="M18 15l3 -3" />
                 </svg>
-                <div class="caixa">
+                <div class="caixa_aside">
                     <p>Sair</p>
                 </div>
             </button>
@@ -102,7 +101,7 @@
     </aside>
     <main id="Maindashboard" class="Maindashboard">
         <div class="formulario">
-            <h1>Cadastra-se</h1>
+            <h1>Cadastrar Administrador</h1>
 
             <label for="">Nome de usúario:</label>
             <input id="input_nome" type="text" placeholder="Coloque seu nome de usúario">
@@ -131,25 +130,7 @@
                     <input type="number" id="input_nascimento">
                 </div>
             </div>
-
-            <label>Nivel no xadrez:</label>
-            <div class="linha_radio">
-                <div class="caixa_radio">
-                    <input type="radio" name="input_nivel" id="input_nivel" value="iniciante" class="radio">
-                    <label>Iniciante</label>
-                </div>
-                <div class="caixa_radio">
-                    <input type="radio" name="input_nivel" id="input_nivel" value="intermediario" class="radio">
-                    <label>Intermediário</label>
-                </div>
-                <div class="caixa_radio">
-                    <input type="radio" name="input_nivel" id="input_nivel" value="experiente" class="radio">
-                    <label>Experiente</label>
-                </div>
-            </div>
-
             <button onclick="cadastro()">Criar conta</button>
-            <p class="conta">Já possuí uma conta? <a href="login.html">Entrar</a></p>
         </div>
     </main>
 </body>
@@ -157,106 +138,108 @@
 </html>
 
 <script>
-    const Graficopublico = document.getElementById('Graficopublico');
+    
+    var verificacao = false;
+    var validacaoTamamho = false
+    var letraMaiuscula = false
 
-    new Chart(Graficopublico, {
-        type: 'doughnut',
-        data: {
-            labels: ['Masculino', 'Feminino'],
-            datasets: [{
-                label: 'Sexo',
-                data: [19, 19],
-                borderWidth: 0
-            }]
-        },
-        options: {
-            responsive: false,
+
+    function validarTexto() {
+        var senha = input_senha.value
+        var tamanho = senha.length
+
+        if (senha.toLowerCase() != senha) {
+            letraMaiuscula = true
         }
-    });
 
-    const GraficofezQuiz = document.getElementById('GraficofezQuiz');
-    new Chart(GraficofezQuiz, {
-        type: 'doughnut',
-        data: {
-            labels: ['Respondeu', 'Não respondeu'],
-            datasets: [{
-                label: 'Realizou',
-                data: [19, 19],
-                borderWidth: 0
-            }]
-        },
-        options: {
-            responsive: false,
+        if (letraMaiuscula == true) {
+            document.getElementById("maiusculo").style.color = 'green';
+        } else {
+            document.getElementById("maiusculo").style.color = 'red';
         }
-    });
 
-    const GraficoQntQuiz = document.getElementById('GraficoQntQuiz').getContext('2d');
-    new Chart(GraficoQntQuiz, {
-        type: 'bar',
-        data: {
-            labels: ['Quiz 1', 'Quiz 2', 'Quiz 3'],
-            datasets: [{
-                data: [10, 20, 15],
-                backgroundColor: ['#3498db', '#2ecc71', '#e74c3c']
-            }]
-        },
-        options: {
-            responsive: false,
-            plugins: {
-                legend: {
-                    display: false
-                },
-                title: {
-                    display: true,
-                    text: 'Quantidade de realização de cada Quiz',
-                    font: {
-                        size: 18
-                    }
-                }
-            },
-            scales: {
-                y: {
-                    grid: {
-                        display: false
-                    }
-                }
+
+        if (tamanho <= 8) {
+            document.getElementById("quantidade").style.color = 'red'
+        } else {
+            document.getElementById("quantidade").style.color = 'green'
+            validacaoTamamho = true
+        }
+
+        for (var i = 0; i <= 9; i++) {
+            var algarismo = senha.indexOf(i.toString())
+
+            if (algarismo != -1) {
+                verificacao = true
             }
         }
-    });
 
-    const Graficonivel = document.getElementById('Graficonivel').getContext('2d');
-    new Chart(Graficonivel, {
-        type: 'bar',
-        data: {
-            labels: ['Experiente', 'Intermédiario', 'Novato'],
-            datasets: [{
-                data: [10, 20, 15],
-                backgroundColor: ['#3498db', '#2ecc71', '#e74c3c']
-            }]
-        },
-        options: {
-            responsive: false,
-            plugins: {
-                legend: {
-                    display: false
-                },
-                title: {
-                    display: true,
-                    text: 'Quantidade de cada nível de usuario',
-                    font: {
-                        size: 18
-                    }
-                }
-            },
-            scales: {
-                y: {
-                    grid: {
-                        display: false
-                    }
-                }
-            }
+        if (verificacao == true) {
+            document.getElementById("numero").style.color = 'green';
+        } else {
+            document.getElementById("numero").style.color = 'red';
         }
-    });
 
 
+    }
+    function cadastro() {
+
+        var nomeVar = input_nome.value;
+        var emailVar = input_email.value;
+        var senhaVar = input_senha.value;
+        var sexoVar = select_sexo.value;
+        var nascimentoVar = input_nascimento.value;
+
+        if (
+            nomeVar == "" ||
+            emailVar == "" ||
+            senhaVar == "" ||
+            sexoVar == "" ||
+            nascimentoVar == "" 
+        ) {
+            document.getElementById('aviso1').style.display = 'flex'
+            return false;
+        }
+        if (letraMaiuscula == true && validacaoTamamho == true && verificacao == true) {
+
+            // Enviando o valor da nova input
+            fetch("/usuarios/cadastrarADM", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    // crie um atributo que recebe o valor recuperado aqui
+                    // Agora vá para o arquivo routes/usuario.js
+                    nomeServer: nomeVar,
+                    emailServer: emailVar,
+                    senhaServer: senhaVar,
+                    sexoServer: sexoVar,
+                    nascimentoServer: nascimentoVar,
+                    // nivelServer: nivelVar
+                }),
+            })
+                .then(function (resposta) {
+                    console.log("resposta: ", resposta);
+
+                    if (resposta.ok) {
+                        document.getElementById('aviso2').style.display = 'flex'
+
+                        setTimeout(() => {
+                            window.location = "dashboard.html";
+                        }, "2000");
+
+                    } else {
+                        throw "Houve um erro ao tentar realizar o cadastro!";
+                    }
+                })
+                .catch(function (resposta) {
+                    console.log(`#ERRO: ${resposta}`);
+                });
+
+            return false;
+        } else {
+            // alert('validação não atende')
+        }
+    }
 </script>
