--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -528,6 +528,8 @@
                             <span class="txt_alerta">${historico.porcentagem}</span>
                             <span class="txt_alerta">${historico.dtRealizacao}</span>
                         </div>`
+
+                        console.log(historico.tempo)
                 });
             })
             .catch(error => {
