mudança em algumas inputs

--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="caixa">
-                    <label for="">Data de Nascimento:</label>
+                    <label for="">Idade:</label>
                     <input type="number" id="input_nascimento">
                 </div>
             </div>
