--- a/Website/public/cadastroADM.html
+++ b/Website/public/cadastroADM.html
@@ -12,6 +12,7 @@
     <aside>
         <ul>
             <img id="logo" src="assets/img/LOGO.svg" alt="">
+            
 
             <button id="selecionado" class="select-aside" onclick="window.location = 'dashboard.html'">
                 <svg class="icone" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
@@ -110,7 +111,7 @@
             <input id="input_email" type="text" placeholder="Ex: usuario123@gmail.com">
 
             <label for="">Senha:</label>
-            <input id="input_senha" oninput="validarTexto()" type="text" placeholder="Define sua senha">
+            <input id="input_senha" oninput="validarTexto()" type="text" placeholder="Define a senha">
 
             <p class="condicao" id="quantidade">Contém pelo menos 8 caracter </p>
             <p class="condicao" id="numero">Contém pelo menos um número </p>
@@ -126,7 +127,7 @@
                 </div>
 
                 <div class="caixa">
-                    <label for="">Data de Nascimento:</label>
+                    <label for="">Idade:</label>
                     <input type="number" id="input_nascimento">
                 </div>
             </div>
